<resources>
    <string name="app_name">SpaceX</string>
    <string name="company">Company</string>
    <string name="launches">Launches</string>
    <string name="company_info_placeholder">{companyName} was founded by {founderName} in {year}. It has now {employees} employees, {launch_sites} launch sites, and is valued at USD {valuation}</string>
    <string name="company_info_template">%1$s was founded by %2$s in %3$d. It has now %4$d employees, %5$d launch sites, and is valued at USD %6$s</string>
    <string name="mission">Mission:</string>
    <string name="date_time">Date/time:</string>
    <string name="rocket">Rocket:</string>
    <string name="days_since">Days since now:</string>
    <string name="mission_name">{mission name}</string>
    <string name="date_at_time">{date} at {time}</string>
    <string name="name_type">{name} / {type}</string>
    <string name="today_minus_launch_date">{today - launch date}</string>
    <string name="fromDays">from</string>
    <string name="sinceDays">since</string>
    <string name="daysSinceFromLaunch">Days %1$s now:</string>
    <string name="dateAtTime">%1$s at %2$s</string>
    <string name="by_launch_year">by launch year</string>
    <string name="by_success_launch">by launch success</string>
    <string name="filter">Filter</string>
    <string name="show_only_success">Show only Success</string>
    <string name="clear_filter">clear filters</string>
    <string name="search_year">search year</string>
    <string name="default_is_asc">default sort: ASC</string>
    <string name="sort_by_desc">Sort by DESC</string>
    <string name="external_links">External Links</string>
    <string name="video">video</string>
    <string name="wiki">wikipedia</string>
</resources>