<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="?attr/listPreferredItemPaddingStart"
    android:paddingTop="?attr/listPreferredItemPaddingStart"
    android:paddingEnd="?attr/listPreferredItemPaddingEnd"
    android:paddingBottom="?attr/listPreferredItemPaddingStart">

    <ImageView
        android:id="@+id/mission_patch_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/success_iv"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mission_patch_iv" />

    <TextView
        style="@style/spacex_text_item"
        android:id="@+id/missionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/mission"
        app:layout_constraintStart_toEndOf="@+id/mission_patch_iv"
        app:layout_constraintTop_toTopOf="@+id/mission_patch_iv" />

    <TextView
        style="@style/spacex_text_item"
        android:id="@+id/dateTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        app:layout_constraintStart_toEndOf="@+id/mission_patch_iv"
        app:layout_constraintStart_toStartOf="@+id/missionTextView"
        app:layout_constraintTop_toBottomOf="@+id/missionTextView" />

    <TextView
        style="@style/spacex_text_item"
        android:id="@+id/rocketTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rocket"
        app:layout_constraintStart_toStartOf="@+id/missionTextView"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeTextView" />

    <TextView
        style="@style/spacex_text_item"
        android:id="@+id/daysSinceFromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/missionTextView"
        app:layout_constraintTop_toBottomOf="@+id/rocketTextView"
        tools:text="@string/days_since" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/missionNameTextView"
        style="@style/spacex_text_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/mission_patch_iv"
        tools:text="@string/mission_name" />

    <TextView
        android:id="@+id/dateAtTimeTextView"
        style="@style/spacex_text_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/missionNameTextView"
        tools:text="@string/date_at_time" />

    <TextView
        android:id="@+id/nameTypeTextView"
        style="@style/spacex_text_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/dateAtTimeTextView"
        tools:text="@string/name_type" />

    <TextView
        android:id="@+id/todayMinusLaunchDateTextView"
        style="@style/spacex_text_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/nameTypeTextView"
        tools:text="@string/today_minus_launch_date" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>