<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LaunchesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/spacex_toolbar"
        style="@style/spacex_toolbar"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/spacex_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/company_info_divider"
        style="@style/spacex_content_title_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacex_toolbar" />

    <TextView
        android:id="@+id/company_info"
        style="@style/spacex_text_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_info_divider"
        tools:text="@string/company_info_placeholder" />

    <TextView
        android:id="@+id/launches_divider"
        style="@style/spacex_content_title_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/launches"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_info" />

</androidx.constraintlayout.widget.ConstraintLayout>